# w2flow

./: .dockerignore  .env.example  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic-old/versions/: 014817d507cb_create_tables.py  5c9b9792acb0_make_pressupost_nullable.py  a1b2c3d4e5f6_add_optional_tender_fields.py
alembic/versions/: 0001_create_tenders_and_filter_configs_tables.py  1830436449a2_add_max_licitacions_to_filter_configs.py  2b4f9c1e3d7a_update_filter_configs_defaults_rn14.py  32dad608b433_fase_j1_score_columns_and_tender_.py
app/: config.py  main.py
app/infrastructure/: database.py  dependencies.py
app/infrastructure-old/: dependencies.py
app/templates/: base.html  filters.html  index.html  report_detail.html  reports.html  tenders.html
docs/: architecture.md  openapi.yaml
docs/adrs/: 001-clean-architecture.md  002-mariadb-primary-database.md  002-postgresql-database.md  003-fastapi-rest-framework.md  004-timbal-workflow-engine.md  005-daily-batch-pipeline.md  006-retry-strategy.md  007-single-data-source.md  008-branching-versioning-strategy.md
docs/api-contractaciopublica/: JSON.json  README.md  cerca-avancada-response.json
examples/: agent.py  agent_simple.py  agents_in_hooks.py  download_web_for_httpx.py  main.py  post_hooks.py  pre_hooks.py  searchweb_timbal.py  tender_downloader.py  timbal_workflow.py  tools.py
files/: 300748932.json
requirements/: requirements.md
tests/: conftest.py  test_e2e_pipeline.py  test_main.py
tests-old/: test_main.py
(+190 files in other folders)
